--- a/.classpath
+++ b/.classpath
@@ -1,35 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-  <classpathentry kind="src" path="src"/>
-  <classpathentry kind="src" path=".gen/src">
-    <attributes>
-		  <attribute name="optional" value="true"/>
-    </attributes>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="io/immutables/lang/node/" kind="src" path="old"/>
+	<classpathentry kind="src" path=".gen/src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+		</attributes>
 	</classpathentry>
-  <classpathentry kind="src" path="buck-out/annotation/src/io/immutables/grammar/fixture/__fixture_gen__">
-    <attributes>
-		  <attribute name="optional" value="true"/>
-    </attributes>
+	<classpathentry kind="src" path="buck-out/annotation/src/io/immutables/grammar/fixture/__fixture_gen__">
+		<attributes>
+			<attribute name="optional" value="true"/>
+		</attributes>
 	</classpathentry>
-  <classpathentry kind="src" path="buck-out/annotation/src/io/immutables/lang/__lang_gen__">
-    <attributes>
-		  <attribute name="optional" value="true"/>
-    </attributes>
+	<classpathentry kind="src" path="buck-out/annotation/src/io/immutables/lang/__lang_gen__">
+		<attributes>
+			<attribute name="optional" value="true"/>
+		</attributes>
 	</classpathentry>
-  <classpathentry kind="src" path="buck-out/annotation/src/io/immutables/lang/fixture/__fixture_gen__">
-    <attributes>
-		  <attribute name="optional" value="true"/>
-    </attributes>
+	<classpathentry kind="src" path="buck-out/annotation/src/io/immutables/lang/fixture/__fixture_gen__">
+		<attributes>
+			<attribute name="optional" value="true"/>
+		</attributes>
 	</classpathentry>
-  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-  <classpathentry kind="lib" path="buck-out/gen/lib/guava_jar/guava-22.0.jar" sourcepath="buck-out/gen/lib/guava_src/guava-22.0-sources.jar"/>
-  <classpathentry kind="lib" path="buck-out/gen/lib/jsr305_jar/jsr305-3.0.1.jar" sourcepath="buck-out/gen/lib/jsr305_src/jsr305-3.0.1-sources.jar"/>
-  <classpathentry kind="lib" path="buck-out/gen/lib/junit_jar/junit-4.12.jar" sourcepath="buck-out/gen/lib/junit_src/junit-4.12-sources.jar"/>
-  <classpathentry kind="lib" path="buck-out/gen/lib/hamcrest_jar/hamcrest-core-1.3.jar" sourcepath="buck-out/gen/lib/hamcrest_src/hamcrest-core-1.3-sources.jar"/>
-  <classpathentry kind="lib" path="buck-out/gen/lib/immutables_trees_jar/trees-2.5.6.jar" sourcepath="buck-out/gen/lib/immutables_trees_src/trees-2.5.6-sources.jar"/>
-  <classpathentry kind="lib" path="buck-out/gen/lib/immutables_ordinal_jar/ordinal-2.5.6.jar" sourcepath="buck-out/gen/lib/immutables_ordinal_src/ordinal-2.5.6-sources.jar"/>
-  <classpathentry kind="lib" path="buck-out/gen/lib/immutables_annotations_jar/value-2.5.6-annotations.jar" sourcepath="buck-out/gen/lib/immutables_annotations_src/value-2.5.6-annotations-sources.jar"/>
-  <classpathentry kind="lib" path="buck-out/gen/lib/immutables_generator_jar/generator-processor-2.5.6-luggage.jar" sourcepath="buck-out/gen/lib/immutables_generator_src/generator-processor-2.5.6-luggage-sources.jar"/>
-  <classpathentry kind="output" path=".classes"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="buck-out/gen/lib/guava_jar/guava-22.0.jar" sourcepath="buck-out/gen/lib/guava_src/guava-22.0-sources.jar"/>
+	<classpathentry kind="lib" path="buck-out/gen/lib/jsr305_jar/jsr305-3.0.1.jar" sourcepath="buck-out/gen/lib/jsr305_src/jsr305-3.0.1-sources.jar"/>
+	<classpathentry kind="lib" path="buck-out/gen/lib/junit_jar/junit-4.12.jar" sourcepath="buck-out/gen/lib/junit_src/junit-4.12-sources.jar"/>
+	<classpathentry kind="lib" path="buck-out/gen/lib/hamcrest_jar/hamcrest-core-1.3.jar" sourcepath="buck-out/gen/lib/hamcrest_src/hamcrest-core-1.3-sources.jar"/>
+	<classpathentry kind="lib" path="buck-out/gen/lib/immutables_trees_jar/trees-2.5.6.jar" sourcepath="buck-out/gen/lib/immutables_trees_src/trees-2.5.6-sources.jar"/>
+	<classpathentry kind="lib" path="buck-out/gen/lib/immutables_ordinal_jar/ordinal-2.5.6.jar" sourcepath="buck-out/gen/lib/immutables_ordinal_src/ordinal-2.5.6-sources.jar"/>
+	<classpathentry kind="lib" path="buck-out/gen/lib/immutables_annotations_jar/value-2.5.6-annotations.jar" sourcepath="buck-out/gen/lib/immutables_annotations_src/value-2.5.6-annotations-sources.jar"/>
+	<classpathentry kind="lib" path="buck-out/gen/lib/immutables_generator_jar/generator-processor-2.5.6-luggage.jar" sourcepath="buck-out/gen/lib/immutables_generator_src/generator-processor-2.5.6-luggage-sources.jar"/>
+	<classpathentry kind="output" path=".classes"/>
 </classpath>
-	
