--- a/io/ecs/gen/src/io/immutables/ecs/gen/.editorconfig
+++ b/io/ecs/gen/src/io/immutables/ecs/gen/.editorconfig
@@ -1,5 +1,13 @@
 
-[Schema.generator]
+[*.generator]
+indent_style = space
+indent_size = 2
+continuation_indent_size = 4
+charset = utf-8
+end_of_line = lf
+insert_final_newline = true
+
+[*.grammar]
 indent_style = space
 indent_size = 2
 continuation_indent_size = 4
