--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry excluding="io/immutables/lang/node/" kind="src" path="old"/>
+	<classpathentry excluding="io/immutables/lang/type/Matcher.java|io/immutables/lang/type/Check.java" kind="src" path="src"/>
 	<classpathentry kind="src" path=".gen/src">
 		<attributes>
 			<attribute name="optional" value="true"/>
@@ -22,14 +21,26 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="buck-out/annotation/src/io/immutables/build/dot/__dot_gen__">
+		<attributes>
+			<attribute name="optional" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="buck-out/gen/lib/guava_jar/guava-22.0.jar" sourcepath="buck-out/gen/lib/guava_src/guava-22.0-sources.jar"/>
-	<classpathentry kind="lib" path="buck-out/gen/lib/jsr305_jar/jsr305-3.0.1.jar" sourcepath="buck-out/gen/lib/jsr305_src/jsr305-3.0.1-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="buck-out/gen/lib/jsr305_jar/jsr305-3.0.1.jar" sourcepath="buck-out/gen/lib/jsr305_src/jsr305-3.0.1-sources.jar"/>
 	<classpathentry kind="lib" path="buck-out/gen/lib/junit_jar/junit-4.12.jar" sourcepath="buck-out/gen/lib/junit_src/junit-4.12-sources.jar"/>
 	<classpathentry kind="lib" path="buck-out/gen/lib/hamcrest_jar/hamcrest-core-1.3.jar" sourcepath="buck-out/gen/lib/hamcrest_src/hamcrest-core-1.3-sources.jar"/>
-	<classpathentry kind="lib" path="buck-out/gen/lib/immutables_trees_jar/trees-2.5.6.jar" sourcepath="buck-out/gen/lib/immutables_trees_src/trees-2.5.6-sources.jar"/>
-	<classpathentry kind="lib" path="buck-out/gen/lib/immutables_ordinal_jar/ordinal-2.5.6.jar" sourcepath="buck-out/gen/lib/immutables_ordinal_src/ordinal-2.5.6-sources.jar"/>
-	<classpathentry kind="lib" path="buck-out/gen/lib/immutables_annotations_jar/value-2.5.6-annotations.jar" sourcepath="buck-out/gen/lib/immutables_annotations_src/value-2.5.6-annotations-sources.jar"/>
-	<classpathentry kind="lib" path="buck-out/gen/lib/immutables_generator_jar/generator-processor-2.5.6-luggage.jar" sourcepath="buck-out/gen/lib/immutables_generator_src/generator-processor-2.5.6-luggage-sources.jar"/>
+	<classpathentry kind="lib" path="buck-out/gen/lib/immutables_trees_jar/trees-2.7.1.jar" sourcepath="buck-out/gen/lib/immutables_trees_src/trees-2.7.1-sources.jar"/>
+	<classpathentry kind="lib" path="buck-out/gen/lib/immutables_ordinal_jar/ordinal-2.7.1.jar" sourcepath="buck-out/gen/lib/immutables_ordinal_src/ordinal-2.7.1-sources.jar"/>
+	<classpathentry kind="lib" path="buck-out/gen/lib/immutables_annotations_jar/value-2.7.1-annotations.jar" sourcepath="buck-out/gen/lib/immutables_annotations_src/value-2.7.1-annotations-sources.jar"/>
+	<classpathentry kind="lib" path="buck-out/gen/lib/immutables_generator_jar/generator-processor-2.7.1-luggage.jar" sourcepath="buck-out/gen/lib/immutables_generator_src/generator-processor-2.7.1-luggage-sources.jar"/>
+	<classpathentry kind="lib" path="buck-out/gen/lib/gson_jar/gson-2.8.5.jar" sourcepath="buck-out/gen/lib/gson_src/gson-2.8.5-sources.jar"/>
+	<classpathentry kind="lib" path="buck-out/gen/lib/immutables_gson_jar/gson-2.7.1.jar" sourcepath="buck-out/gen/lib/immutables_gson_src/gson-2.7.1-sources.jar"/>
+	<classpathentry kind="lib" path="buck-out/gen/lib/jackson_jar/jackson-core-2.9.7.jar" sourcepath="buck-out/gen/lib/jackson_src/jackson-core-2.9.7-sources.jar"/>
+	<classpathentry kind="lib" path="buck-out/gen/lib/jackson_xml_jar/jackson-dataformat-xml-2.9.7.jar" sourcepath="buck-out/gen/lib/jackson_xml_src/jackson-dataformat-xml-2.9.7-sources.jar"/>
+	<classpathentry kind="lib" path="buck-out/gen/lib/woodstox_api_jar/stax2-api-3.1.4.jar" sourcepath="buck-out/gen/lib/woodstox_api_src/stax2-api-3.1.4-sources.jar"/>
+	<classpathentry kind="lib" path="buck-out/gen/lib/woodstox_core_jar/woodstox-core-5.0.3.jar" sourcepath="buck-out/gen/lib/woodstox_core_src/woodstox-core-5.0.3-sources.jar"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/assignments"/>
 	<classpathentry kind="output" path=".classes"/>
 </classpath>
